--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello baby... want something dirty?</h1>
+<h1>Hello.. this is my first page. Learning HTML for first time and its pretty interesting<3 !!!</h1>
 </body>
 </html>
